--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'wheels' %}active{% endif %}" href="{{ url_for('wheels') }}">
+                            <i class="fas fa-cog me-1"></i>Wheels
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'about' %}active{% endif %}" href="{{ url_for('about') }}">
                             <i class="fas fa-info-circle me-1"></i>About Us
                         </a>
