--- a/templates/wheels.html
+++ b/templates/wheels.html
@@ -106,8 +106,7 @@
                             <a href="{{ url_for('product_detail', product_id=product.id) }}" class="btn btn-primary">
                                 <i class="fas fa-search me-2"></i>View Details
                             </a>
-                        </div>
-                        {% if product.is_new_stock %}
+                        </div>                        {% if product.is_new_stock == 1 %}
                         <span class="badge bg-accent position-absolute top-0 end-0 m-3 py-2 px-3">New</span>
                         {% endif %}
                         
